<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_0065ff"
    tools:context=".activity.ContactUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bg"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btn_img_return"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:src="@mipmap/icon_title_left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:text="@string/my_contact_us"
                android:textColor="@color/color_112950"
                android:textSize="@dimen/size_26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_contact_us_email"
                android:textColor="@color/color_112950"
                android:textSize="@dimen/size_20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/my_contact_us_email_content"
                android:textColor="@color/color_8e9aab"
                android:textIsSelectable="true"
                android:textSize="@dimen/size_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_5dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@color/color_f2f4f5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_contact_us_phone"
                android:textColor="@color/color_112950"
                android:textSize="@dimen/size_20sp" />

            <TextView
                android:id="@+id/tv_contact_us_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/my_contact_us_phone_number"
                android:textColor="@color/color_8e9aab"
                android:textSize="@dimen/size_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_contact_us_phone_number_reminder"
                android:textColor="@color/color_dddddd"
                android:textSize="@dimen/size_12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>