<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_emergency_contact_list_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimen_14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/fill_in_contacts"
            android:textColor="@color/color_112950"
            android:textSize="@dimen/size_19sp" />

        <ImageView
            android:id="@+id/safety_detail_close"
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_emergency_contact_list_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_5dp"
        android:background="@color/color_e5e5e5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_14dp"
        android:text="@string/emergency_contact_one"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/size_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:background="@drawable/shape_emergency_contact_list_edittext_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/et_emergency_contact_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/emergency_contact_hint"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingVertical="@dimen/dimen_15dp"
            android:textColor="@color/color_4d4d4d"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/size_16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_14dp"
        android:text="@string/emergency_contact_two"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/size_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:background="@drawable/shape_emergency_contact_list_edittext_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_10dp">


        <EditText
            android:id="@+id/et_emergency_contact_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/emergency_contact_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingVertical="@dimen/dimen_15dp"
            android:textColor="@color/color_4d4d4d"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/size_16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_emergency_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@drawable/shape_big_btn"
        android:gravity="center"
        android:paddingVertical="@dimen/size_12sp"
        android:text="@string/emergency_contact_define"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/size_16sp" />
</LinearLayout>